--- a/ConsoleApp1/WebCrawler.csproj
+++ b/ConsoleApp1/WebCrawler.csproj
@@ -6,4 +6,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.0" />
+  </ItemGroup>
+
 </Project>
